clients/include/rocblas.hpp

template <>
static constexpr auto rocblas_swap_batched<float> = rocblas_sswap_batched;
template <>
static constexpr auto rocblas_swap_batched<double> = rocblas_dswap_batched;
template <>
static constexpr auto rocblas_swap_batched<rocblas_float_complex> = rocblas_cswap_batched;
template <>
static constexpr auto rocblas_swap_batched<rocblas_double_complex> = rocblas_zswap_batched;
template <>
static constexpr auto rocblas_swap_strided_batched<float> = rocblas_sswap_strided_batched;
template <>
static constexpr auto rocblas_swap_strided_batched<double> = rocblas_dswap_strided_batched;
template <>
static constexpr auto
    rocblas_swap_strided_batched<rocblas_float_complex> = rocblas_cswap_strided_batched;
template <>
static constexpr auto
    rocblas_swap_strided_batched<rocblas_double_complex> = rocblas_zswap_strided_batched;
template <>
static constexpr auto rocblas_axpy<rocblas_half> = rocblas_haxpy;
template <>
static constexpr auto rocblas_axpy<float> = rocblas_saxpy;
template <>
static constexpr auto rocblas_axpy<double> = rocblas_daxpy;
template <>
static constexpr auto rocblas_axpy<rocblas_float_complex> = rocblas_caxpy;
template <>
static constexpr auto rocblas_axpy<rocblas_double_complex> = rocblas_zaxpy;
template <>
static constexpr auto rocblas_axpy_batched<rocblas_half> = rocblas_haxpy_batched;
template <>
static constexpr auto rocblas_axpy_batched<float> = rocblas_saxpy_batched;
template <>
static constexpr auto rocblas_axpy_batched<double> = rocblas_daxpy_batched;
template <>
static constexpr auto rocblas_axpy_batched<rocblas_float_complex> = rocblas_caxpy_batched;
template <>
static constexpr auto rocblas_axpy_batched<rocblas_double_complex> = rocblas_zaxpy_batched;